# hw3-xschnq

./: .gitignore  Makefile  README.md  _config.yml  _toc.yml  ai_documentation.txt  config.json  environment.yml  index.html  index.json  index.md  losc-event-tutorial.json  myst.xref.json  myst.yml  objects.inv  pyproject.toml
.github/workflows/: deploy.yml
_build/html/: config.json  hw03-description.json  index.html  index.json  losc-event-tutorial.json  myst.search.json  myst.xref.json  objects.inv
_build/html/hw03-description/: index.html
_build/html/losc-event-tutorial/: index.html
_build/site/: myst.xref.json  objects.inv
_build/site/content/: hw03-description.json  index.json  losc-event-tutorial.json
_build/site/public/: index-d82fef59db2c62bd1877a585d8c292ae.md
ligotools/: setup.py  utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
losc-event-tutorial/: index.html
