[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "LIGO signal analysis tools for Stat 159/259 homework"
authors = [
    { name = "Ligo Scientific Collaboration (LSC) and Cyrus Choi" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "h5py",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]